SDC-739. spark-manager script must have principal and keytab and call kinit
Change-Id: I0b3073609637d47761847f35b73d3bd9da1c1a56
Reviewed-on: https://review.streamsets.net/336
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Brock Noland <brock@streamsets.com>